omnibook (2:2.20060809-3) unstable; urgency=low

  * UNRELEASED
  * New upstream release:
    + Changed default location to extra/
    + Support for new Toshiba Satellite models (M100, A105)
    + Fixed Toshiba Satellite M40X detection string
  * [01_makfefile.dpatch] Removed - fixed upstream
  * Changed defaut STEM value to linux (follows kernel-package)

 -- Julien Valroff <julien@kirya.net>  Sat, 12 Aug 2006 11:56:39 +0200

omnibook (2:2.20060809-2) unstable; urgency=low

  * Include copyright and Debian changelog in omnibook-module
  * Fix Makefile issue in a more elegant way

 -- Julien Valroff <julien@kirya.net>  Thu, 10 Aug 2006 10:16:47 +0200

omnibook (2:2.20060809-1) unstable; urgency=low

  * New upstream release:
    + Addeed autodetection of the Toshiba Satellite M40X laptop

 -- Julien Valroff <julien@kirya.net>  Thu, 10 Aug 2006 09:40:45 +0200

omnibook (2:2.20060806-1) unstable; urgency=low

  * New upstream branch - Mathieu Bérard launched new project
  * Added myself as co-maintainer
  * Bumped upstream version and use epoch to ensure upgrades
  * [debian/rules]:
    + Clean-ups
    + Recommends linux-image or kernel-image
  * [debian/control] Improved long description
  * [debian/post*.modules.in] Fixed bashisms
  * Added patch to fix install target in Makefile

 -- Julien Valroff <julien@kirya.net>  Thu, 10 Aug 2006 01:35:38 +0200

omnibook (20060126-1) unstable; urgency=low

  * Minor build inconveniences corrected.

 -- Daniel Gimpelevich <daniel@gimpelevich.san-francisco.ca.us>  Sun, 18 Jun 2006 12:28:55 -0700

omnibook (20060126-0) unstable; urgency=low

  * Locally built.

 -- Péter Soós <sp@osb.hu>  Wed, 25 Jan 2006 21:06:28 +0100
